# timescale-challenge

./: .gitignore  Makefile  pyproject.toml  readme.md  timescale.Dockerfile
setup-file/: copy-csv.sql
setup-files/: timescale.Dockerfile
src/: logic.py  test.py
src/tests/: timescale_test.py
src/timescale/: main.py
