[tool.poetry]
name = "cpu_usage_cli"
version = "0.1.0"
description = "Retrieve statistic of cpu usage from a timesclae instance"
authors = ["Pierre Valentin <me@pierrevalentin.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
psycopg2 = "^2.8.6"
click-option-group = "^0.5.1"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
prospector = "^1.3.0"
autopep8 = "^1.5.4"
pytest = "^6.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
